restrict height of tree widget and set overflow:auto so that node clicked on and content displayed as a result are on same visible page. Fixes WEB-1.
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/bioconductor.org@65242 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/assets/style/bioconductor.css
+++ b/assets/style/bioconductor.css
@@ -589,6 +589,8 @@ ul.inline_list li {
 /* styles for displaying biocViews hierarchy */
 .biocViewsTree {
  float:left;
+ height:300px;
+ overflow:auto;
 }
 
 .biocViewsTreePadding {
